fixed the width of the quantity on the single warehouse page that was causing an overlap onto the trashcan and making it unclickable

--- a/src/components/SingleWarehouseInventory/SingleWarehouseInventory.scss
+++ b/src/components/SingleWarehouseInventory/SingleWarehouseInventory.scss
@@ -61,12 +61,13 @@
         align-items: center;
     }
     &__quantity {
-        width: calc(100% - 2rem);
         color: black;
-		display: flex;
+        display: flex;
         justify-content: center;
         position: relative;
-        left: 1.7rem;
+        left: 1.5rem;
+        align-items: center;
+        margin: auto;
     }
     &__category {
         width: calc(100% - 2rem);
@@ -104,7 +105,7 @@
 .delete {
     padding-right: 1rem;
     @include mobile-behavior() {
-        padding-right: 0;
+        // padding-right: 0;
     }
     &:hover {
         cursor: pointer;
@@ -128,11 +129,11 @@ a {
 }
 
 .mobile-only-img {
+    padding-top: 1.5rem;
+    width: 25px;
     @include tablet {
         display: none;
     }
-    padding-top: 1.5rem;
-    width: 25px;
 }
 
 .mobile-only-img2 {
